--- a/static/css/style-responsive.css
+++ b/static/css/style-responsive.css
@@ -1,3 +1,11 @@
 #phone-button{
 	margin-top: 15px;
 }
+@media screen and (max-width: 1024px){
+	#main-content{
+		padding: 85px 0;
+	}
+	#jumbotron{
+		height: 400px;
+	}
+}
